# pulse-core

./: Makefile.am  README  configure.ac  pulsecore.pc.in
debian/: changelog  control  rules
m4/: ax_pthread.m4
