pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = pulsecore.pc

pulsecoreincludedir=$(includedir)/pulsecore
pulsecorefilterincludedir=$(includedir)/pulsecore/filter
pulsecoreffmpegincludedir=$(includedir)/pulsecore/ffmpeg

pulsecoreinclude_HEADERS = \
	include/arpa-inet.h \
	include/asyncmsgq.h \
	include/asyncq.h \
	include/atomic.h \
	include/aupdate.h \
	include/auth-cookie.h \
	include/authkey.h \
	include/avahi-wrap.h \
	include/bitset.h \
	include/card.h \
	include/cli-command.h \
	include/client.h \
	include/cli.h \
	include/cli-text.h \
	include/conf-parser.h \
	include/core-error.h \
	include/core-format.h \
	include/core.h \
	include/core-rtclock.h \
	include/core-scache.h \
	include/core-subscribe.h \
	include/core-util.h \
	include/cpu-arm.h \
	include/cpu.h \
	include/cpu-orc.h \
	include/cpu-x86.h \
	include/creds.h \
	include/database.h \
	include/dbus-shared.h \
	include/dbus-util.h \
	include/device-port.h \
	include/dynarray.h \
	include/endianmacros.h \
	include/esound.h \
	include/fdsem.h \
	include/flist.h \
	include/g711.h \
	include/hashmap.h \
	include/hook-list.h \
	include/i18n.h \
	include/idxset.h \
	include/iochannel.h \
	include/ioline.h \
	include/ipacl.h \
	include/llist.h \
	include/lock-autospawn.h \
	include/log.h \
	include/ltdl-helper.h \
	include/macro.h \
	include/mcalign.h \
	include/memblock.h \
	include/memblockq.h \
	include/memchunk.h \
	include/memfd-wrappers.h \
	include/mem.h \
	include/memtrap.h \
	include/mime-type.h \
	include/mix.h \
	include/modargs.h \
	include/modinfo.h \
	include/module.h \
	include/msgobject.h \
	include/mutex.h \
	include/namereg.h \
	include/native-common.h \
	include/object.h \
	include/once.h \
	include/packet.h \
	include/parseaddr.h \
	include/pdispatch.h \
	include/pid.h \
	include/pipe.h \
	include/play-memblockq.h \
	include/play-memchunk.h \
	include/poll.h \
	include/proplist-util.h \
	include/protocol-cli.h \
	include/protocol-dbus.h \
	include/protocol-esound.h \
	include/protocol-http.h \
	include/protocol-native.h \
	include/protocol-simple.h \
	include/pstream.h \
	include/pstream-util.h \
	include/queue.h \
	include/random.h \
	include/ratelimit.h \
	include/refcnt.h \
	include/remap.h \
	include/resampler.h \
	include/rtkit.h \
	include/rtpoll.h \
	include/sample-util.h \
	include/sconv.h \
	include/sconv-s16be.h \
	include/sconv-s16le.h \
	include/semaphore.h \
	include/shared.h \
	include/shm.h \
	include/sink.h \
	include/sink-input.h \
	include/sioman.h \
	include/sndfile-util.h \
	include/socket-client.h \
	include/socket.h \
	include/socket-server.h \
	include/socket-util.h \
	include/sound-file.h \
	include/sound-file-stream.h \
	include/source.h \
	include/source-output.h \
	include/srbchannel.h \
	include/start-child.h \
	include/strbuf.h \
	include/stream-util.h \
	include/strlist.h \
	include/tagstruct.h \
	include/thread.h \
	include/thread-mq.h \
	include/time-smoother.h \
	include/tokenizer.h \
	include/typedefs.h \
	include/usergroup.h \
	include/winerrno.h \
	include/x11prop.h \
	include/x11wrap.h

pulsecorefilterinclude_HEADERS = \
	include/filter/biquad.h \
	include/filter/crossover.h \
	include/filter/lfe-filter.h

pulsecoreffmpeginclude_HEADERS = 
	include/ffmpeg/avcodec.h \
	include/ffmpeg/dsputil.h
